--- a/Template/default/list_down.html
+++ b/Template/default/list_down.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>{{qcms:WebName}}</title>
+    <title>{{qcms:Cate_Name}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="QCMS" />
     <meta name="description" content="QCMS" />
@@ -11,119 +11,35 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-4" style="height: 200px;">
-        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40" style="height: 380px;">
+        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
-    <div class="container mb-4 px-2">
+    <div class="container mb-40 px-2">
         <div class="row">
             <div class="col-8" >
 
                     <div class="h5 text-black py-2 font-weight-bold">资料下载</div>
                     <div class="bg-white py-2" >
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3 pt-1"><img class="d-block" src="/Static/images/p1.jpg" style="width:42px; height: 42px;"></div>
-                            <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">
-                                <span class="mr-3">OLED屏新iPad和MacBook Air曝光</span>
-                                <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                </div>
-                                <div class="text-secondary mb-2">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
-                                <div class="text-secondary">
-                                时间：<span class="mr-2 text-dark">2022-11-22</span> 下载次数：<span class="mr-2 text-dark">699</span>
-                                    </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3 pt-1"><img class="d-block" src="/Static/images/p1.jpg" style="width:42px; height: 42px;"></div>
-                            <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1 d-flex align-items-center" style="font-size: 1.2rem;">
-                                <span class="mr-3">OLED屏新iPad和MacBook Air曝光</span>
-                                <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                </div>
-                                <div class="text-secondary mb-2">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
-                                <div class="text-secondary">
-                                时间：<span class="mr-2 text-dark">2022-11-22</span> 下载次数：<span class="mr-2 text-dark">699</span>
-                                    </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3 pt-1"><img class="d-block" src="/Static/images/p1.jpg" style="width:42px; height: 42px;"></div>
-                            <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">
-                                <span class="mr-3">OLED屏新iPad和MacBook Air曝光</span>
-                                <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                </div>
-                                <div class="text-secondary mb-2">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
-                                <div class="text-secondary">
-                                时间：<span class="mr-2 text-dark">2022-11-22</span> 下载次数：<span class="mr-2 text-dark">699</span>
-                                    </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3 pt-1"><img class="d-block" src="/Static/images/p1.jpg" style="width:42px; height: 42px;"></div>
-                            <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">
-                                <span class="mr-3">OLED屏新iPad和MacBook Air曝光</span>
-                                <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                </div>
-                                <div class="text-secondary mb-2">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
-                                <div class="text-secondary">
-                                时间：<span class="mr-2 text-dark">2022-11-22</span> 下载次数：<span class="mr-2 text-dark">699</span>
-                                    </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3 pt-1"><img class="d-block" src="/Static/images/p1.jpg" style="width:42px; height: 42px;"></div>
-                            <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">
-                                <span class="mr-3">OLED屏新iPad和MacBook Air曝光</span>
-                                <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                </div>
-                                <div class="text-secondary mb-2">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
-                                <div class="text-secondary">
-                                时间：<span class="mr-2 text-dark">2022-11-22</span> 下载次数：<span class="mr-2 text-dark">699</span>
-                                    </div>
-                            </div>
-                            </a>
-                        </div>
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3 pt-1"><img class="d-block" src="/Static/images/p1.jpg" style="width:42px; height: 42px;"></div>
-                            <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">
-                                <span class="mr-3">OLED屏新iPad和MacBook Air曝光</span>
-                                <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                </div>
-                                <div class="text-secondary mb-2">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
-                                <div class="text-secondary">
-                                时间：<span class="mr-2 text-dark">2022-11-22</span> 下载次数：<span class="mr-2 text-dark">699</span>
-                                    </div>
-                            </div>
-                            </a>
-                        </div>
+                        {{list Model='down' CateId='{{qcms:Cate_CateId}}' Row='10' IsPage='1'}}
+                        <div class="p-4 border-bottom d-flex">
 
-                        <ul class="pagination justify-content-center py-3 my-0"><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">首页</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">上一页</a></li><li class="page-item active"><a class="page-link">1</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">下一页</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">尾页</a></li><li class="page-item  disabled "><a class="page-link">总5条</a></li></ul>
+                            <div class="mr-3 pt-1"><a href="{{qcms:List_Url}}"><img class="d-block" src="{{qcms:List_Pic}}" style="width:60px; height: 60px;"></a></div>
+                            <div class="d-flex align-items-start flex-column">
+                                <div class="font-weight-bold" style="font-size: 1.2rem;">
+                                <a href="{{qcms:List_Url}}"><span class="mr-3">{{qcms:List_Title}}</span></a>
+                                {{qcms:List_Tag}}
+                                </div>
+                                <div class="text-secondary "><a href="{{qcms:List_Url}}">{{qcms:List_Summary}}</a></div>
+                                <div class="text-secondary">
+                                时间：<span class="mr-2 text-dark">{{Date format='Y-m-d' time='{{qcms:List_TsUpdate}}'}}</span> 下载次数：<span class="mr-2 text-dark">{{qcms:List_ReadNum}}</span>
+                                    </div>
+                            </div>
+
+                        </div>
+                        {{/list}}
+
+
+                        {{qcms:List_PageBar}}
                     </div>
 
 
