--- a/Template/default/detail_album.html
+++ b/Template/default/detail_album.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>{{qcms:WebName}}</title>
+    <title>{{qcms:Detail_Title}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="QCMS" />
     <meta name="description" content="QCMS" />
@@ -16,34 +16,29 @@
     </div>
 
     <div class="container mb-4 p-4 bg-white">
-        <h1>分类名字测试</h1>
-        <div class="pb-2 mb-3 border-bottom text-secondary">来源 <span class="text-black mr-2">新华网</span> 作者 <span class="text-black mr-2">老钱</span> 日期 <span class="text-black mr-2">2022-11-22</span> 浏览数 <span class="text-black mr-2">604</span></div>
-        <div class="row px-3 ">
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p1.jpg">
+        <h1>{{qcms:Detail_Title}}</h1>
+        <div class="pb-2 mb-3 border-bottom text-secondary">来源 <span class="text-black mr-2">{{qcms:Detail_Source}}</span> 作者 <span class="text-black mr-2">{{qcms:Detail_Author}}</span> 日期 <span class="text-black mr-2">{{date format='Y-m-d' time='{{qcms:Detail_TsUpdate}}'}}</span> 浏览数 <span class="text-black mr-2">{{qcms:Detail_ReadNum}}</span></div>
+        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                {{photo}}
+                <li class="swiper-slide"><img class="w-100 d-block" src="{{qcms:Photo_Path}}"></li>
+                {{/photo}}
+
             </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p2.jpg">
-            </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p3.jpg">
-            </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p1.jpg">
-            </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p2.jpg">
-            </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p3.jpg">
-            </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p1.jpg">
-            </div>
-            <div class="col-3 px-0">
-                <img class="w-100 d-block" src="/Static/images/p2.jpg">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+
+        <div thumbsSlider="" class="swiper mySwiper2">
+            <div class="swiper-wrapper">
+                {{photo}}
+                <div class="swiper-slide">
+                  <img src="{{qcms:Photo_Path}}" />
+                </div>
+                {{/photo}}
             </div>
         </div>
+
         <div class="pt-3 mt-3 border-top">
         <p>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br></p>
         </div>
@@ -53,4 +48,6 @@
 </body>
 <script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
 <script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
+<script src="{{qcms:static}}bootstrap/js/swiper.min.js"></script>
+<script src="{{qcms:pathJs}}/index.js"></script>
 </html>
