下载 模板完成

--- a/Template/default/list_down.html
+++ b/Template/default/list_down.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-8" >
 
-                    <div class="h5 text-black py-2 font-weight-bold">资料下载</div>
+                    <div class="h5 text-black py-2 font-weight-bold">{{qcms:Cate_Name}}</div>
                     <div class="bg-white py-2" >
                         {{list Model='down' CateId='{{qcms:Cate_CateId}}' Row='10' IsPage='1'}}
                         <div class="p-4 border-bottom d-flex">
@@ -51,115 +51,26 @@
                     <div class="h5 text-black py-2 font-weight-bold">下载排行</div>
                     <div  class="bg-white mb-4" >
                         <div class="px-4 pt-4 pb-1">
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            {{list Model='down' Row='10'}}
+                            <div class="mb-3 overflow-hidden">
+                            <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
+                            <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
                             <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                                <div class="text-nowrap" style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="text-secondary">{{qcms:List_STitle}}</div>
                             </div>
                             </a>
                             </div>
-
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
+                            {{/list}}
                         </div>
 
                     </div>
 
                     <div class="h5 text-black py-2 font-weight-bold">热门新闻</div>
                     <div  class="bg-white p-4" >
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook A</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacB东方供货</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBoo京东方供货</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光</a></li>
-                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
+                        {{list Module='article'  'Row='10'}}
+                        <li class="mb-2 text-nowrap"><span class="badge badge-{{if '{{qcms:List_i}}' < '4'}}primary{{else}}default{{/if}} mr-2 h6">{{qcms:List_i}}</span><a href="{{qcms:List_Url}}">{{qcms:List_Title}}</a></li>
+                        {{/list}}
                     </div>
 
             </div>
