--- a/Template/default/detail_down.html
+++ b/Template/default/detail_down.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>{{qcms:WebName}}</title>
+    <title>{{qcms:Detail_Title}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="QCMS" />
     <meta name="description" content="QCMS" />
@@ -16,26 +16,32 @@
     </div>
     <div class="container text-dark mb-4">
         <div class="row">
-            <div class="col-9" >
+            <div class="col-8" >
                 <div class="bg-white p-4">
                     <div class=" mb-4">
                         <div class="text-secondary">
-                            <h1 class="mb-4" style="line-height: unset;">产品名称</h1>
-                            <div class="pb-2 mb-3 border-bottom text-secondary">来源 <span class="text-black mr-2">新华网</span> 作者 <span class="text-black mr-2">老钱</span> 日期 <span class="text-black mr-2">2022-11-22</span> 浏览数 <span class="text-black mr-2">604</span></div>
+                            <div class="d-flex flex-row border-bottom pb-2 mb-3">
+                                <div class="mr-3">
+                                    <img src="{{qcms:Detail_Pic}}" style="width: 60px;height: 60px;"/>
+                                </div>
+                                <div>
+                                    <h1 class="" style="line-height: unset;">{{qcms:Detail_Title}}</h1>
+                                    <div class="text-secondary">来源 <span class="text-black mr-2">{{qcms:Detail_Source}}</span> 作者 <span class="text-black mr-2">{{qcms:Detail_Author}}</span> 日期 <span class="text-black mr-2">{{date format='Y-m-d' time='{{qcms:Detail_TsAdd}}'}}</span> 浏览数 <span class="text-black mr-2">{{qcms:Detail_ReadNum}}</span></div>
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-6">
-                                    <p>商品名称：<span class="text-dark ">vivoX70 Pro</span></p>
-                                    <p>CPU型号：<span class="text-dark ">三星Exynos 1080</span></p>
-                                    <p>前摄主摄像素：<span class="text-dark ">3200万像素</span></p>
-                                    <p>系统：<span class="text-dark ">Android</span></p>
-                                    <p>运行内存：<span class="text-dark ">12GB</span></p>
+                                    <p>软件大小：<span class="text-dark ">{{qcms:Detail_Size}}</span></p>
+                                    <p>软件语言：<span class="text-dark ">{{qcms:Detail_Lang}}</span></p>
+                                    <p>应用平台：<span class="text-dark">{{qcms:Detail_Platform}}</span></p>
+
+                                    <p>软件授权：<span class="text-dark ">{{qcms:Detail_Auth}}</span></p>
                                 </div>
                                 <div class="col-6">
-                                    <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                                    <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                                    <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                                    <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                                    <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
+                                    <p>软件评级：<span class="text-dark ">{{qcms:Detail_Level}} 星级</span></p>
+                                    <p>软件厂商：<span class="text-dark">{{qcms:Detail_Company}}</span></p>
+                                    <p>官方网站：<span class="text-dark">{{qcms:Detail_WebSite}}</span></p>
+                                    <p>更新时间：<span class="text-dark">{{date format='Y-m-d' time='{{qcms:Detail_TsUpdate}}'}}</span></p>
                                 </div>
                             </div>
 
@@ -50,45 +56,21 @@
                     <button class="btn btn-primary my-3"><i class="bi bi-arrow-down mr-1"></i>立即下载</button>
                 </div>
             </div>
-            <div class="col-3" >
+            <div class="col-4" >
                 <div class="bg-white">
-                    <div class="bg-white px-4 pt-4 pb-2">
-                        <div class="font-weight-bold mb-3">热门商品</div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
+                    <div class="bg-white px-4 pt-3 pb-2">
+                        <div class="font-weight-bold mb-2">下载排行</div>
+                        {{list Model='down' Row='10'}}
+                            <div class="mb-3 overflow-hidden">
+                            <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
+                            <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div class="text-nowrap" style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="text-secondary">{{qcms:List_STitle}}</div>
+                            </div>
+                            </a>
+                            </div>
+                            {{/list}}
                     </div>
                 </div>
             </div>
