--- a/Template/default/detail_album.html
+++ b/Template/default/detail_album.html
@@ -11,11 +11,11 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-4" style="height: 200px;">
-        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40" style="height: 380px;">
+        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
 
-    <div class="container mb-4 p-4 bg-white">
+    <div class="container mb-40 p-4 bg-white">
         <h1>{{qcms:Detail_Title}}</h1>
         <div class="pb-2 mb-3 border-bottom text-secondary">来源 <span class="text-black mr-2">{{qcms:Detail_Source}}</span> 作者 <span class="text-black mr-2">{{qcms:Detail_Author}}</span> 日期 <span class="text-black mr-2">{{date format='Y-m-d' time='{{qcms:Detail_TsUpdate}}'}}</span> 浏览数 <span class="text-black mr-2">{{qcms:Detail_ReadNum}}</span></div>
         <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
