--- a/Template/default/list_album.html
+++ b/Template/default/list_album.html
@@ -12,7 +12,7 @@
 <body>
     {{include filename='component_header.html'}}
     <div class="mb-40" style="height: 380px;">
-        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url({{qcms:Cate_Pic}}); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
     <div class=" text-center mb-3">
         <div class=" h3 text-black font-weight-bold">{{qcms:Cate_Name}}</div>
