--- a/Template/default/detail_album.html
+++ b/Template/default/detail_album.html
@@ -4,8 +4,8 @@
 <head>
     <title>{{qcms:Detail_Title}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
-    <meta name="keywords" content="QCMS" />
-    <meta name="description" content="QCMS" />
+    <meta name="keywords" content="{{qcms:Detail_Keywords}}" />
+    <meta name="description" content="{{qcms:Detail_Description}}" />
 
 </head>
 {{include filename='component_meta.html'}}
