--- a/Template/default/component_footer.html
+++ b/Template/default/component_footer.html
@@ -2,6 +2,6 @@
     <div class="container text-center text-white">
         <div class="mb-2">关于我们  |  联系我们  |  广告服务  |  友情链接  |  版权声明  |  人才招聘  |  帮助 </div>
         <div class="mb-2 ">{{qcms:Copyright}} </div>
-        <div class="">{{qcms:Icp}}</div>
+        <div class="">{{qcms:Icp}} {{qcms:StatsCode}} </div>
     </div>
 </div>
