--- a/Template/default/list_contact.html
+++ b/Template/default/list_contact.html
@@ -14,44 +14,35 @@
     <div class="mb-4" style="height: 200px;">
         <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
-    <div class="container text-dark bg-white p-4 my-5">
-        <div class=" text-center mb-4">
+    <div class="container text-dark bg-white pt-40 my-5">
+        <div class=" text-center">
             <div class=" h3 text-black font-weight-bold">保持联系</div>
             <p class="text-secondary" >无线降噪无线降噪无线降噪无线降噪无线降噪</p>
         </div >
-        <div class="row p-4">
+        <div class="row ">
             <div class="col-6  p-5 ">
-                <div class="font-weight-bold mb-2" style="font-size:1.2rem; ">联系我们</div>
+                <div class="font-weight-bold " style="font-size:1.2rem; ">联系我们</div>
                 <div class="mb-3">联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们</div>
                 <div><i class="bi bi-house-door-fill mr-2"></i>地址：上海市徐汇区某某路XX号</div>
                 <div><i class="bi bi-phone-fill mr-2"></i>电话：+086 18888888888</div>
                 <div><i class="bi bi-globe mr-2"></i>传真：+086 18888888888</div>
                 <div><i class="bi bi-envelope-fill mr-2"></i>邮件：+seles@admin.com</div>
-                <div class="mt-4"><img class="img-fluid" src="/Static/images/map.png"></div>
+                <div class="mt-4" id="map" style="height: 400px;"></div>
             </div>
             <div class="col-6 p-5">
                 <form method="post" action="http://q6.demo.com/index/form.html?KeyName=form1"><div class="form-group col-12  col-lg-12">
-                        <label for="Input_Name" class=" mb-1">用户名</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
-                        <input type="text"  class="form-control " name="Name" id="Input_Name" placeholder="请输入用户名" value="" required="required">
-                </div>
-                <div class="form-group col-12  col-lg-12">
-                        <label for="Input_Phone" class=" mb-1">手机号</label>
-                        <input type="text"  class="form-control " name="Phone" id="Input_Phone" placeholder="请输入手机号" value="" >
-                </div>
-                <div class="form-group col-12  col-lg-12">
-                        <label for="Input_Address" class=" mb-1">地址</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
-                        <input type="text"  class="form-control " name="Address" id="Input_Address" placeholder="请输入地址" value="" required="required">
-                </div>
-                <div class="form-group col-12  col-lg-12">
-                        <label for="Input_mail" class=" mb-1">电子邮箱</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
-                        <input type="text"  class="form-control " name="mail" id="Input_mail" placeholder="请输入电子邮箱" value="" required="required">
-                </div>
-                <div class="form-group col-12  col-lg-12">
-                        <label for="Input_age" class=" mb-1">年龄</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
-                        <input type="text"  class="form-control " name="age" id="Input_age" placeholder="请输入年龄" value="" required="required">
-                </div>
-                <div class="form-group col-12  col-lg-12"><label  class="mr-3 mb-1 d-block">性别<span class="text-danger ml-2" style="font-weight: 900;">*</span></label><label class="radio-inline mr-3 text-dark py-2 h6"><input type="radio" name="sex"  value="男" > 男</label><label class="radio-inline mr-3 text-dark py-2 h6"><input type="radio" name="sex"  value="女" checked="checked"> 女</label><label class="radio-inline mr-3 text-dark py-2 h6"><input type="radio" name="sex"  value="未知" > 未知</label></div>
-                <div class="form-group col-12  col-lg-12"><button type="submit" class="btn btn-primary " id="Button_">提交</button></div></form>
+        <label for="Input_Name" class=" mb-1">名字</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
+        <input type="text"  class="form-control " name="Name" id="Input_Name" placeholder="请输入名字" value="" required="required">
+</div>
+<div class="form-group col-12  col-lg-12">
+        <label for="Input_Phone" class=" mb-1">电话</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
+        <input type="text"  class="form-control " name="Phone" id="Input_Phone" placeholder="请输入电话" value="" required="required">
+</div>
+<div class="form-group col-12  col-lg-12">
+                        <label for="Input_Message" class="mb-1">留言</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
+                        <textarea class="form-control" name="Message"  rows="6" id="Input_Message" placeholder="请输入留言" required="required"></textarea>
+                      </div>
+<div class="form-group col-12  col-lg-12"><button type="submit" class="btn btn-primary " id="Button_">提交</button></div></form>
 
             </div>
         </div>
@@ -61,4 +52,26 @@
 </body>
 <script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
 <script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
+<script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=boKTPiys0KAOXXrgA5GWDjhd3rlVDlfo"></script>
+<script type="text/javascript">
+// 百度地图API功能
+    var map = new BMapGL.Map("map");
+    var point = new BMapGL.Point(121.410169,31.179938);
+    map.centerAndZoom(point, 15);
+
+    var marker = new BMapGL.Marker(point);  // 创建标注
+    map.addOverlay(marker);              // 将标注添加到地图中
+    var opts = {
+        width : 200,     // 信息窗口宽度
+        height: 100,     // 信息窗口高度
+        title : "{{qcms:WebName}}" , // 信息窗口标题
+        message:"这里是公司地址"
+    }
+    var infoWindow = new BMapGL.InfoWindow("地址：北京市东城区王府井大街88号乐天银泰百货八层", opts);  // 创建信息窗口对象
+    map.openInfoWindow(infoWindow, point);
+    marker.addEventListener("click", function(){
+        map.openInfoWindow(infoWindow, point); //开启信息窗口
+    });
+
+</script>
 </html>
