--- a/Template/default/component_header.html
+++ b/Template/default/component_header.html
@@ -25,14 +25,14 @@
                 </li>
                 {{else}}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{qcms:Menu_Url}}">{{qcms:Menu_Name}}</a>
+                    <a class="nav-link"  href="{{qcms:Menu_Url}}">{{qcms:Menu_Name}}</a>
                 </li>
                 {{/if}}
                 {{/menu}}
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="请输入搜索关键字" aria-label="Search">
+            <form method="get" action="/index/search.html" class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" name="Search" type="search" placeholder="请输入搜索关键字">
                 <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
             </form>
         </div>
