新增了 缩略图功能 和 内链功能

--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -39,6 +39,14 @@ figure {
         text-align: center;
         margin: 1em auto;
     }
+    .Inlink{
+        color: #007bff!important;
+        padding-left: 2px;
+        padding-right:2px;
+    }
+    .Inlink:hover{
+        text-decoration:underline;
+    }
     font-size: 1.1rem !important;
 }
 
