--- a/Template/default/list_contact.html
+++ b/Template/default/list_contact.html
@@ -30,7 +30,7 @@
                 <div class="mt-4" id="map" style="height: 400px;"></div>
             </div>
             <div class="col-6 p-5">
-                <form method="post" action="http://q6.demo.com/index/form.html?KeyName=form1"><div class="form-group col-12  col-lg-12">
+                <form method="post" action="/index/form/form1.html"><div class="form-group col-12  col-lg-12">
         <label for="Input_Name" class=" mb-1">名字</label><span class="text-danger ml-2" style="font-weight: 900;">*</span>
         <input type="text"  class="form-control " name="Name" id="Input_Name" placeholder="请输入名字" value="" required="required">
 </div>
