--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -55,99 +55,18 @@
                     <div class="h5 text-black py-2 font-weight-bold">下载中心</div>
                     <div  class="bg-white" >
                         <div class="px-4 pt-4 pb-1">
+                            {{list Model='down' Row='10'}}
                             <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
+                            <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
                             <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                                <div style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="text-secondary">{{qcms:List_STitle}}</div>
                             </div>
                             </a>
                             </div>
+                            {{/list}}
 
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
-                            <div class="mb-3">
-                            <a class="d-flex align-items-center" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
-                            <div>
-                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
-                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
-                            </div>
-                            </a>
-                            </div>
                         </div>
 
                     </div>
