--- a/Template/default/index_main.html
+++ b/Template/default/index_main.html
@@ -124,8 +124,5 @@
     </div>
 {{include filename='component_footer.html'}}
 </body>
-<script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
-<script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
-<script src="{{qcms:static}}bootstrap/js/swiper.min.js"></script>
-<script src="{{qcms:pathJs}}/index.js"></script>
+{{include filename='component_js.html'}}
 </html>
