--- a/Template/default/list_contact.html
+++ b/Template/default/list_contact.html
@@ -50,8 +50,7 @@
 
     {{include filename='component_footer.html'}}
 </body>
-<script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
-<script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
+{{include filename='component_js.html'}}
 <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=boKTPiys0KAOXXrgA5GWDjhd3rlVDlfo"></script>
 <script type="text/javascript">
 // 百度地图API功能
