--- a/Template/default/component_meta.html
+++ b/Template/default/component_meta.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link href="{{qcms:static}}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="{{qcms:static}}bootstrap/css/morris.css" rel="stylesheet" type="text/css">
-<link href="{{qcms:static}}bootstrap/css/style-init.css" rel="stylesheet" type="text/css">
-<link href="{{qcms:static}}bootstrap/css/swiper.min.css" rel="stylesheet" type="text/css">
-<link href="{{qcms:pathCss}}index.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:Static}}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:Static}}bootstrap/css/morris.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:Static}}bootstrap/css/style-init.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:Static}}bootstrap/css/swiper.min.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:PathCss}}index.css" rel="stylesheet" type="text/css">
