--- a/Template/default/detail_album.html
+++ b/Template/default/detail_album.html
@@ -46,8 +46,5 @@
 
     {{include filename='component_footer.html'}}
 </body>
-<script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
-<script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
-<script src="{{qcms:static}}bootstrap/js/swiper.min.js"></script>
-<script src="{{qcms:pathJs}}/index.js"></script>
+{{include filename='component_js.html'}}
 </html>
