--- a/Template/default/list_down.html
+++ b/Template/default/list_down.html
@@ -79,6 +79,5 @@
 
     {{include filename='component_footer.html'}}
 </body>
-<script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
-<script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
+{{include filename='component_js.html'}}
 </html>
