4 修复了自定义系统变量的排序问题 5 模板生成器 （自定义标签和自定义系统变量展现出来，方便开发者复制调用） 6 批量替换可以高级替换 7 截取字符串前 先过滤HTML代码 （用了strip_tags函数 ）

--- a/Static/styles/user.less
+++ b/Static/styles/user.less
@@ -103,3 +103,12 @@ option:disabled {
     z-index: 1;
     background-color: transparent;
 }
+.text-normarl{
+    font-size: 1rem;
+}
+.text-sm{
+    font-size: .8rem;
+}
+.text-lg{
+    font-size: 1.2rem;
+}
