--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -46,7 +46,7 @@
             <div class="col-12 col-md-4" >
                     <div class="h5 text-black py-2 font-weight-bold">热门新闻</div>
                     <div  class="bg-white p-4 mb-4" >
-                        {{list Module='article' CateId='{{qcms:Cate_CateId}} ' Row='10'}}
+                        {{list Model='article' CateId='{{qcms:Cate_CateId}} ' Row='10'}}
                         <li class="mb-2 text-nowrap"><a href="{{qcms:List_Url}}"><span class="badge badge-{{if '{{qcms:List_i}}' < '4'}}primary{{else}}default{{/if}} mr-2 h6">{{qcms:List_i}}</span>{{Cut Len='20' Str='{{qcms:List_Title}}'}}</a></li>
                         {{/list}}
 
