1 分页改为纯静态，seo优化 2 内容颜色 ...

--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -109,6 +109,9 @@ figure {
 .Content img{
     max-width: 100%;
 }
+.font-weight-1{
+    font-weight: 700!important;
+}
 @media (max-width: 991.98px) {
     .swiperBanner{
         height: 260px;
