--- a/Template/default/detail_down.html
+++ b/Template/default/detail_down.html
@@ -65,7 +65,7 @@
                             <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
                             <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
                             <div>
-                                <div class="text-nowrap" style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="text-nowrap font-weight-{{qcms:List_IsBold}}" style="font-size:1.1rem;{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_STitle}}</div>
                             </div>
                             </a>
