--- a/Template/default/detail_product.html
+++ b/Template/default/detail_product.html
@@ -52,7 +52,7 @@
                         <div class="mb-3">
                             <a href="{{qcms:List_Url}}">
                             <img class="w-100 mb-2 d-block" src="{{qcms:List_Pic}}">
-                            <div class="text-black ">{{qcms:List_Title}}</div>
+                            <div class="text-black font-weight-{{qcms:List_IsBold}}" style="{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                             <p class="text-danger"><span class="mr-2">{{qcms:List_Price}} 万元</span><!----><del class="text-muted"><span class="num">{{qcms:List_Price}} 万元</span></del></p>
                             </a>
                         </div>
