--- a/Template/default/list_product.html
+++ b/Template/default/list_product.html
@@ -26,7 +26,7 @@
                 <a href="{{qcms:List_Url}}">
                 <div class="bg-white p-2">
                 <img class="w-100 d-block mb-3" src="{{qcms:List_Pic}}">
-                <div class="text-black font-weight-bold">{{qcms:List_Title}}</div>
+                <div class="text-black font-weight-{{qcms:List_IsBold}}" style="{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                 <div class="mb-1 text-secondary">{{qcms:List_STitle}}</div>
                 <p class="text-danger"><span class="mr-2">{{qcms:List_Price}} 万元</span><!----><del class="text-muted"><span class="num">{{qcms:List_Price}} 万元</span></del></p>
                 </div>
