--- a/Template/default/index_main.html
+++ b/Template/default/index_main.html
@@ -35,7 +35,7 @@
                 <a href="{{qcms:List_Url}}">
                 <div class="bg-white p-2">
                 <img class="w-100 mb-3 d-block" src="{{qcms:List_Pic}}">
-                <div class="text-black font-weight-bold">{{qcms:List_Title}}</div>
+                <div class="text-black font-weight-{{qcms:List_IsBold}}" style="{{qcms:List_Color}} ">{{qcms:List_Title}}</div>
                 <div class="mb-1 text-secondary">{{qcms:List_STitle}}</div>
                 <p class="text-danger"><span class="mr-2">{{qcms:List_Price}} 万元</span><!----><del class="text-muted"><span class="num">{{qcms:List_Price}} 万元</span></del></p>
                 </div>
@@ -57,7 +57,7 @@
                             <div class="mb-2 mb-md-1 mr-md-3"><a href="{{qcms:List_Url}}"><img class="d-block indexNewsImg" src="{{qcms:List_Pic}}" ></a></div>
                             <div class="d-flex align-items-start flex-column">
                                 <a href="{{qcms:List_Url}}">
-                                <div class="font-weight-bold " style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
+                                <div class="font-weight-{{qcms:List_IsBold}} " style="font-size: 1.2rem;{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_Summary}}</div>
                                 </a>
                                 <div class="mt-auto">
@@ -80,7 +80,7 @@
                             <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
                             <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
                             <div>
-                                <div class="text-nowrap" style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="text-nowrap" style="font-size:1.1rem;{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_STitle}}</div>
                             </div>
                             </a>
