--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -26,7 +26,7 @@
                             <div class="mb-2 mb-md-1 mr-md-3"><a class="" href="{{qcms:List_Url}}"><img class="d-block border indexNewsImg" src="{{qcms:List_Pic}}" ></a></div>
                             <div class="d-flex align-items-start flex-column">
                                 <a class="" href="{{qcms:List_Url}}">
-                                <div class="font-weight-bold" style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
+                                <div class="font-weight-{{qcms:List_IsBold}}" style="font-size: 1.2rem;{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_Summary}}</div>
                                 </a>
                                 <div class="mt-auto">
@@ -47,7 +47,7 @@
                     <div class="h5 text-black py-2 font-weight-bold">热门新闻</div>
                     <div  class="bg-white p-4 mb-4" >
                         {{list Model='article' CateId='{{qcms:Cate_CateId}} ' Row='10'}}
-                        <li class="mb-2 text-nowrap"><a href="{{qcms:List_Url}}"><span class="badge badge-{{if '{{qcms:List_i}}' < '4'}}primary{{else}}default{{/if}} mr-2 h6">{{qcms:List_i}}</span>{{Cut Len='20' Str='{{qcms:List_Title}}'}}</a></li>
+                        <li class="mb-2 text-nowrap"><a href="{{qcms:List_Url}}"><span class="badge badge-{{if '{{qcms:List_i}}' < '4'}}primary{{else}}default{{/if}} mr-2 h6">{{qcms:List_i}}</span><span class="font-weight-{{qcms:List_IsBold}}" style="{{qcms:List_Color}}">{{Cut Len='20' Str='{{qcms:List_Title}}'}}</span></a></li>
                         {{/list}}
 
                     </div>
@@ -60,7 +60,7 @@
                             <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
                             <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
                             <div>
-                                <div style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="font-weight-{{qcms:List_IsBold}}" style="font-size:1.1rem;{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_STitle}}</div>
                             </div>
                             </a>
