--- a/Template/default/list_down.html
+++ b/Template/default/list_down.html
@@ -25,8 +25,8 @@
 
                             <div class="mr-3 pt-1"><a href="{{qcms:List_Url}}"><img class="d-block" src="{{qcms:List_Pic}}" style="width:60px; height: 60px;"></a></div>
                             <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold" style="font-size: 1.2rem;">
-                                <a href="{{qcms:List_Url}}"><span class="mr-3">{{qcms:List_Title}}</span></a>
+                                <div class="font-weight-{{qcms:List_IsBold}}" style="font-size: 1.2rem;">
+                                <a href="{{qcms:List_Url}}"><span class="mr-3" style="{{qcms:List_Color}}">{{qcms:List_Title}}</span></a>
                                 {{qcms:List_Tag}}
                                 </div>
                                 <div class="text-secondary "><a href="{{qcms:List_Url}}">{{qcms:List_Summary}}</a></div>
@@ -56,7 +56,7 @@
                             <a class="d-flex align-items-center" href="{{qcms:List_Url}}">
                             <div class="mr-3"><img class="d-block" src="{{qcms:List_Pic}}" style="width:40px; height: 40px;"></div>
                             <div>
-                                <div class="text-nowrap" style="font-size:1.1rem;">{{qcms:List_Title}}</div>
+                                <div class="text-nowrap font-weight-{{qcms:List_IsBold}}" style="font-size:1.1rem;{{qcms:List_Color}}">{{qcms:List_Title}}</div>
                                 <div class="text-secondary">{{qcms:List_STitle}}</div>
                             </div>
                             </a>
@@ -69,7 +69,7 @@
                     <div class="h5 text-black py-2 font-weight-bold">热门新闻</div>
                     <div  class="bg-white p-4" >
                         {{list Model='article'  'Row='10'}}
-                        <li class="mb-2 text-nowrap"><span class="badge badge-{{if '{{qcms:List_i}}' < '4'}}primary{{else}}default{{/if}} mr-2 h6">{{qcms:List_i}}</span><a href="{{qcms:List_Url}}">{{qcms:List_Title}}</a></li>
+                        <li class="mb-2 text-nowrap"><span class="badge badge-{{if '{{qcms:List_i}}' < '4'}}primary{{else}}default{{/if}} mr-2 h6">{{qcms:List_i}}</span><a href="{{qcms:List_Url}}" class="font-weight-{{qcms:List_IsBold}}" style="{{qcms:List_Color}}">{{qcms:List_Title}}</a></li>
                         {{/list}}
                     </div>
 
