1 联系我们中的百度地图 shadow img 类css有冲突，避免误会，这边取消使用shadow

--- a/Template/default/component_header.html
+++ b/Template/default/component_header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <div class="container py-3">
         <a class="navbar-brand" href="/">
         <img src="{{qcms:Logo}}" class="logo mx-3" style="height: 30px;" />
