--- a/Template/default/detail_down.html
+++ b/Template/default/detail_down.html
@@ -53,7 +53,7 @@
                     <div class="Content">
                         {{qcms:Detail_Content}}
                     </div>
-                    <a class="btn btn-primary my-3" href="{{qcms:Detail_DownAddress}}" target="_blank"><i class="bi bi-arrow-down mr-1"></i>立即下载</a>
+                    <a class="btn btn-primary my-3" href="{{qcms:Detail_DownAddress}}" target="_blank"><iconpark-icon name="arrow-down" class="mr-1"></iconpark-icon>立即下载</a>
                 </div>
             </div>
             <div class="col-12 col-md-4" >
