--- a/Template/default/component_js.html
+++ b/Template/default/component_js.html
@@ -1,4 +1,5 @@
-<script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.3.1/jquery.min.js" type="application/javascript"></script>
-<script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/4.6.1/js/bootstrap.min.js" type="application/javascript"></script>
-<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/Swiper/8.0.6/swiper-bundle.min.js" type="application/javascript"></script>
+<script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_29154_49.cbeba74a2aeddb9d0bfd48059bffe0e1.js"></script>
+<script src="{{qcms:Static}}bootstrap/js/jquery-3.3.1.min.js" type="application/javascript"></script>
+<script src="{{qcms:Static}}bootstrap/js/bootstrap.bundle.min.js" type="application/javascript"></script>
+<script src="{{qcms:Static}}bootstrap/swiper/swiper-bundle.min.js" type="application/javascript"></script>
 <script src="{{qcms:PathJs}}index.js"></script>
