--- a/Template/default/list_contact.html
+++ b/Template/default/list_contact.html
@@ -23,10 +23,10 @@
             <div class="col-6  p-5 ">
                 <div class="font-weight-bold " style="font-size:1.2rem; ">联系我们</div>
                 <div class="mb-3">联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们联系我们</div>
-                <div><i class="bi bi-house-door-fill mr-2"></i>地址：上海市徐汇区某某路XX号</div>
-                <div><i class="bi bi-phone-fill mr-2"></i>电话：+086 18888888888</div>
-                <div><i class="bi bi-globe mr-2"></i>传真：+086 18888888888</div>
-                <div><i class="bi bi-envelope-fill mr-2"></i>邮件：+seles@admin.com</div>
+                <div>地址：上海市徐汇区某某路XX号</div>
+                <div>电话：+086 18888888888</div>
+                <div>传真：+086 18888888888</div>
+                <div>邮件：+seles@admin.com</div>
                 <div class="mt-4" id="map" style="height: 400px;"></div>
             </div>
             <div class="col-6 p-5">
